version 0.4.5
- Fix for issue 11

version 0.4.4
- Negative coeficients in linear rules were ignored, now fixed

version 0.4.3
- Fixed issue #9, bug with pure categorical rules.

version 0.4.2
- Internal updates for compatability with 'validate' version 0.2.3.

version 0.4.1
- initial release
