@@ -1,6 +1,6 @@
 Package: validatetools
 Title: Checking and Simplifying Validation Rule Sets
-Version: 0.4.4.9000
+Version: 0.4.5
 Authors@R: c( person("Edwin", "de Jonge", email = "edwindjonge@gmail.com", role = c("aut", "cre")
             , comment=c(ORCID="0000-0002-6580-4718"))
             , person("Mark", "van der Loo", email = "mark.vanderloo@gmail.com",role = c("aut"))
